# night-brownie

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.json  DESIGN.md  Dockerfile  PRODUCT.md  config.example.yaml  pyproject.toml  zensical.toml
.github/workflows/: test.yaml
.memsearch/memory/: 2026-04-26.md
agents/issue-triage/: Dockerfile  pyproject.toml
agents/issue-triage/issue_triage/: agent.py
design-system/: colors_and_type.css  content.css  header.css  image_6.af  night-brownie-chat.md
design-system/ui_kits/docs-site/: reference.html
docs/: development.md  explanation.md
docs/howtos/: write-an-agent.md
docs/reference/: cli.md  configuration.md  index.md
docs/reference/api/: config.md  containers.md  credentials.md  executor.md  logging_info.md  memory.md  middleware.md  otel.md  poller.md  protocol.md  queue.md  router.md  server.md  settings.md
docs/reference/api/llm/: anthropic.md  base.md  index.md  ollama.md
docs/reference/api/routers/: agent.md  health.md  index.md  queue.md  result.md
docs/specs/: index.md
docs/specs/01-agent-harness/: SPEC.md  plan.md  todo.md
docs/specs/02-messaging-update/: SPEC.md  idea.md  phase-3-fixes.md  phase-3-review.md  plan.md  pr-21-fixes.md  pr-21-review.md
docs/specs/03-container-runtime-abstraction/: SPEC.md  idea.md  plan.md  review.md
docs/tutorials/: installation.md  quickstart.md
foreman/: __init__.py
night-brownie-client/night_brownie_client/: __init__.py
night_brownie/: __init__.py  __main__.py  config.py  containers.py  server.py
night_brownie/containers/: __init__.py  apple.py  base.py  docker.py  manager.py  podman.py
night_brownie/llm/: __init__.py
overrides/: base.html  home.html
tests/: test_apple_backend.py  test_backend_from_config.py  test_config.py  test_containers.py  test_docker_backend.py  test_integration.py  test_main.py  test_manager.py  test_podman_backend.py  test_server.py
