[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "night-brownie"
description = "A Python harness that acts as an always-on AI co-maintainer for OSS repositories."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
]
keywords = ["night-brownie"]
dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.11.9",
    "pydantic-settings>=2.14.1",
    "opentelemetry-api>=1.41.0",
    "fastapi[standard]",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-sdk",
    "opentelemetry-api",
    "structlog>=25.5.0",
    "opentelemetry-sdk>=1.32.0",
    "opentelemetry-exporter-otlp",
    "PyYAML>=6.0",
    "PyGithub>=2.0",
    "litellm>=1.86.2",
    "httpxyz>=0.28.1",
    "docker>=7.1.0",
]
authors = [
    { name = "Corey Oordt", email = "coreyoordt@gmail.com" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/callowayproject/night-brownie"
Documentation = "https://callowayproject.github.io/night-brownie"
Repository = "https://github.com/callowayproject/night-brownie"
Changelog = "https://github.com/callowayproject/night-brownie/CHANGELOG.md"

[dependency-groups]
dev = [
    "uv",
    "bump-my-version",
    "generate-changelog",
    "types-pyyaml>=6.0.12.20260510",
]
test = [
    "pytest-cov",
    "coverage",
    "httpx",
    "pytest",
    "pytest-socket",
    "pytest-mock",
    "pytest-asyncio",
    "pre-commit",
    "pytest-agent-digest",
]
docs = [
    "griffe-fieldz",
    "griffe-pydantic",
    "mkdocstrings[python]",
    "zensical>=0.0.42",
]


[project.scripts]
night-brownie = "night_brownie.__main__:main"

[tool.hatch.version]
path = "night_brownie/__init__.py"

[tool.uv]
default-groups = ["dev", "test", "docs"]

[tool.rumdl]
# Global options at root level (both snake_case and kebab-case supported)
disable = [
    "MD025",  # single-title
    "MD033",  # Inline HTML
    "MD041",  # First line heading (README might start with badges)
    "MD070",  # frontmatter-key-sort
]
line-length = 120
exclude = ["node_modules", "build", "dist", "CHANGELOG.md", ".memsearch"]
include = ["docs/*.md", "README.md"]
respect-gitignore = true
flavor = "mkdocs"

[tool.rumdl.MD046]
style = "fenced"

[tool.rumdl.MD063]
style = "sentence_case"

[tool.rumdl.MD013]
line-length = 120
reflow = true
reflow-mode = "semantic-line-breaks"

[tool.coverage.run]
branch = true
omit = ["**/test_*.py", "**/__main__.py"]
source = ["night_brownie"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # a more strict default pragma
    "pragma: no cover",
    "pragma: no-coverage",
    # allow defensive code
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
    "^\\s*return NotImplemented\\b",
    "^\\s*raise$",
    # typing-related code
    "^if (False|TYPE_CHECKING):",
    ": \\.\\.\\.(\\s*#.*)?$",
    "^ +\\.\\.\\.$",
    "-> ['\"]?NoReturn['\"]?:",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=night_brownie",
    "--cov-branch",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-report=html",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "{arch}",
    "*.egg",
    "venv",
    "requirements*",
    "lib",
    "night-brownie-client",
    "agents",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
markers = [
    "integration: marks tests as integration tests requiring real HTTP/SQLite (run with --run-integration)",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 90
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[tool.djlint]
profile="jinja"
blank_line_after_tag="load,extends,include,endmacro"
ignore="H030,H031,H006"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 119

[tool.ruff.lint]
preview = true
select = [
    "A", # flake8-builtins
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "BLE", # flake8-blind except
    "C4", # flake8-comprehensions
    "C90", # McCabe complexity
    "D", # pydocstyle
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "N", # PEP8 naming
    "NPY", # NumPy-specific rules
    "PD", # Pandas-vet
    "PERF", # Perflint
    "PGH", # PyGrep hooks
    "PLC", # Pylint conventions
    "PLE", # Pylint errors
    "PLW", # Pylint warnings
    "Q", # flake8-quotes
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "TCH", # Flake8 type-checking
    "W", # pycodestyle warnings
]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN204", # missing-return-type-special-method
    "ANN401", # any-type
    "D105", # undocumented-magic-method
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
    "D200", # fits-on-one-line
    "D212", # multi-line-summary-first-line
    "PD011", # pandas-use-of-dot-values
    "PLC0415", # import-outside-toplevel
    "PLW0108", # unnecessary-lambda
    "PLW1641", # eq-without-hash
    "S101", # assert
    "S104", # hardcoded-bind-all-interfaces
    "S404", # suspicious-subprocess-import
    "S602", # subprocess-popen-with-shell-equals-true
]

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

typing-modules = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]

[tool.ruff.lint.per-file-ignores]
"night_brownie/routers/*.py" = [
    "B008",   # FastAPI Depends() in argument defaults is idiomatic
    "TC001",  # Application imports needed at runtime for FastAPI dependency resolution
    "TC003",  # Stdlib imports needed at runtime for FastAPI dependency resolution
]
"tests/*" = [
    "ANN001", # missing-type-function-argument
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN201", # missing-return-type-undocumented-public-function
    "ANN202", # missing-return-type-private-function
    "PGH003", # blanket-type-ignore
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR2004", # magic-value-comparison
    "PLW0603", # global-statement
    "S101", # assert
    "S105", # hardcoded-password-string
    "S106", # hardcoded-password-func-arg
    "TRY003", # raise-vanilla-args
    "TRY201", # verbose-raise
    "TRY301", # raise-within-try
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
order-by-type = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydoclint]
style = "google"
exclude = '\.git|tests'
require-return-section-when-returning-nothing = false
arg-type-hints-in-docstring = false
check-return-types = false
skip-checking-raises = true
quiet = true

[tool.bumpversion]
current_version = "0.6.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<dev>post)\\d+\\.dev\\d+)?"
serialize = [
    "{major}.{minor}.{patch}.{dev}{$PR_NUMBER}.dev{distance_to_latest_tag}",
    "{major}.{minor}.{patch}"
]
message = "Version updated from {current_version} to {new_version}"

[tool.bumpversion.parts.dev]
values = ["release", "post"]

[[tool.bumpversion.files]]
filename = "night_brownie/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "{current_version}...HEAD"
replace = "{current_version}...{new_version}"
