[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "issue-triage"
version = "0.1.0"
description = "Issue triage agent for the Night Brownie AI harness"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "litellm>=1.0.0",
    "httpxyz>=0.28.0",
    "night-brownie-client>=0.1.0",
    "structlog>=25.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["issue_triage"]
